--- a/login.html
+++ b/login.html
@@ -15,7 +15,12 @@
 
 <body>
     <header id="header">
-        <div class="logo"><a href="">Minimal</a> </div>
+    <div class="logo">
+      <a href="/search.html">
+        <img src="./images/logo.svg" alt="Pharma Map Icon" />
+        Pharma Map
+      </a>
+    </div>
         <div class="hamburger" id="toggle">
             <div class="line"></div>
             <div class="line"></div>
@@ -24,16 +29,18 @@
         <nav class="nav-bar" id="navbar">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="search.html">Search</a>
                 </li>
                 <li>
-                    <a href="#product">Products</a>
+                    <a href="product.html">Products</a>
                 </li>
+
                 <li>
-                    <a href="#about">About Us</a>
+                    <a href="contact.html">Contact</a>
                 </li>
+                
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="map.html">Map</a>
                 </li>
                 <div class="login" id="login">
                     <li>
@@ -47,7 +54,6 @@
         <div class="login-left">
             <div class="login-header">
                 <h1>Welcome</h1>
-                <p>Please login to continue......</p>
             </div>
             <form action="" class="login-form" autocomplete="off">
                 <div class="login-content">
@@ -59,8 +65,7 @@
                         <label for="password">Enter Password</span></label>
                         <label for="text"></label>
                         <input type="password" name="" id="password" placeholder="Enter your Password" required class="pass-key">
-                        <img src="eye-close.png" id="eyeicon" class="password-toggle">
-                        <!-- <span class="show">Show</span> -->
+                        <img src="./images/eye-close.png" id="eyeicon" class="password-toggle">
                     </div>
                     <div class="form-item">
                         <div class="checkbox">
@@ -72,10 +77,6 @@
                         <a href="#">Forgot password?</a>
                     </div>
 
-                    <div class="bg-grey">
-                        <div class="sing-up">Don't have an account? <a href=""class="text-link" id="sign-up" >Sign up</a></div>
-                        <!--<a href="#register" class="link-register">Sign Up</a>-->
-                    </div>
     
                     <button type="submit">LogIn</button>
                 </div>
@@ -88,10 +89,11 @@
                     </a>
                 </div>
             </form>
-        </div>
-        <div class="login-right">
-            <img src="images/Data Arranging_Two Color.svg" alt="">
-        </div>
+            </div>
+            <div class="login-right">
+                <img src="/images/2392098.jpg" alt="" style="width: 90%; height: 80%;">
+            </div>
+
     </div>
 
     <script>
@@ -101,10 +103,10 @@
 		eyeicon.onclick = function() {
 			if (password.type == "password"){
 				password.type = "text"; 
-				eyeicon.src = "eye-open.png";
+				eyeicon.src = "./images/eye-open.png";
 			}else{
 				password.type = "password";
-				eyeicon.src = "eye-close.png";
+				eyeicon.src = "./images/eye-close.png";
 			}
 		} 
 	</script>
