--- a/map.html
+++ b/map.html
@@ -54,7 +54,7 @@
   <body>
     <header id="header">
       <div class="logo">
-        <a href="/search.html">
+        <a href="/index.html">
           <img src="./images/logo.svg" alt="Pharma Map Icon" />
           Pharma Map
         </a>
@@ -67,7 +67,7 @@
       <nav class="nav-bar" id="navbar">
         <ul>
           <li>
-            <a href="search.html">Search</a>
+            <a href="index.html">Search</a>
           </li>
           <li>
             <a href="product.html">Products</a>
